--- a/src/app/wizard-json/wizard-json.component.scss
+++ b/src/app/wizard-json/wizard-json.component.scss
@@ -44,7 +44,7 @@
     background: #394a5d;
   }
 
-  /* .docs-wizard-example-section {
+  .docs-wizard-example-section {
     height: 100vh;
 
     h2 {
@@ -57,7 +57,7 @@
       justify-content: space-around;
       margin: 20px;
     }
-  } */
+  }
 }
 
 /** this is only necessary due to the overlay z-index used in the wizard examples */
