--- a/src/app/wizard-json/wizard-json.component.scss
+++ b/src/app/wizard-json/wizard-json.component.scss
@@ -85,3 +85,16 @@
 .flex-content{
     display: flex;
 }
+//Emisor
+.margin_name {
+  margin-left: 12px; margin-right: 12px
+}
+.wrapper {
+  display: grid; gap: 10px 20px
+}
+.item_col1 {
+  grid-column: 1
+}
+.item_col2{
+  grid-column: 2
+}
