--- a/src/app/wizard-json/wizard-json.component.scss
+++ b/src/app/wizard-json/wizard-json.component.scss
@@ -98,3 +98,15 @@
 .item_col2{
   grid-column: 2
 }
+.item_col3{
+  grid-column: 3
+}
+.item_col4{
+  grid-column: 4
+}
+.ms-1 {
+  margin-left: 4px
+}
+.mt-2 {
+  margin-top: 8px !important
+}
